fix workflow file

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,12 +3,10 @@ on: [push]
 
 jobs:
   build-macos:
-    runs-on: macosx-latest
+    runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v1
       - name: install dependencies
         run: yarn
       - name: build
         run: yarn electron-pack
-      - name: check build
-        run: ls dist/
