--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "electron-dev": "concurrently \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "postinstall": "electron-builder install-app-deps",
     "preelectron-pack": "yarn build",
-    "electron-pack": "electron-builder -m"
+    "electron-pack:mac": "electron-builder -m",
+    "electron-pack:windows": "electron-builder -w",
+    "electron-pack:linux": "electron-builder -l"
   },
   "eslintConfig": {
     "extends": "react-app"
