--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,8 +5,8 @@ jobs:
   build:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@master
@@ -16,10 +16,10 @@ jobs:
         run: yarn
       - name: build macos
         run: yarn electron-pack:mac
-        if: ${{ matrix.platform }} == macos-latest
+        if: ${{ matrix.os }} == macos-latest
       - name: build windows
         run: yarn electron-pack:windows
-        if: ${{ matrix.platform }} == windows-latest
+        if: ${{ matrix.os }} == windows-latest
       - name: build linux
         run: yarn electron-pack:linux
-        if: ${{ matrix.platform }} == ubuntu-latest
+        if: ${{ matrix.os }} == ubuntu-latest
