--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,15 +6,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [macos-lates, windows-latest, ubuntu-latest]
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@master
         with:
           version: 12
-      - name: echo matrix
-        run: echo "${{ matrix.os }}"
       - name: install dependencies
         run: yarn
       - name: build macos
+        env:
+          OS: ${{ matrix.os }}
         run: yarn electron-pack
+        if: matrix.os == "$OS"
