--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,8 @@ jobs:
           version: 12
       - name: install dependencies
         run: yarn
+      - name: test
+        run: yarn test
       - name: build macos
         env:
           OS: ${{ matrix.os }}
