--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-live",
+  "name": "manga-project",
   "version": "0.1.0",
   "private": true,
   "author": {
@@ -11,12 +11,14 @@
   "scripts": {
     "start": "rescripts start",
     "build": "rescripts build",
-    "test": "rescripts test --runInBand",
+    "test": "rescripts test",
     "eject": "react-scripts eject",
     "electron-dev": "concurrently \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "postinstall": "electron-builder install-app-deps",
     "preelectron-pack": "yarn build",
-    "electron-pack": "electron-builder"
+    "electron-pack": "electron-builder",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,29 +36,43 @@
     ]
   },
   "dependencies": {
+    "electron-devtools-installer": "^2.2.4",
     "electron-is-dev": "^1.1.0",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "lodash": "^4.17.15",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-scripts": "3.1.2",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "@rescripts/cli": "^0.0.12",
     "@rescripts/rescript-env": "^0.0.10",
+    "@storybook/addon-actions": "^5.2.3",
+    "@storybook/addon-links": "^5.2.3",
+    "@storybook/addons": "^5.2.3",
+    "@storybook/preset-typescript": "^1.1.0",
+    "@storybook/react": "^5.2.3",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.18",
-    "@types/react": "^16.9.3",
+    "@types/lodash": "^4.14.141",
+    "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
-    "@typescript-eslint/eslint-plugin": "^2.3.1",
-    "@typescript-eslint/parser": "^2.3.1",
-    "concurrently": "^4.1.2",
-    "cross-env": "^6.0.0",
-    "electron": "^6.0.10",
+    "@types/styled-components": "^4.1.19",
+    "@typescript-eslint/eslint-plugin": "^2.3.2",
+    "@typescript-eslint/parser": "^2.3.2",
+    "concurrently": "^5.0.0",
+    "cross-env": "^6.0.3",
+    "electron": "^6.0.11",
     "electron-builder": "^21.2.0",
-    "eslint-config-prettier": "^6.3.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint-config-prettier": "^6.4.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.14.3",
-    "husky": "^3.0.7",
-    "lint-staged": "^9.4.0",
+    "eslint-plugin-react": "^7.16.0",
+    "husky": "^3.0.8",
+    "lint-staged": "^9.4.1",
     "prettier": "^1.18.2",
     "spectron": "^8.0.0",
     "typescript": "^3.6.3",
@@ -66,8 +82,8 @@
     "env"
   ],
   "build": {
-    "appId": "com.ledger.live",
-    "productName": "Ledger Live",
+    "appId": "com.valpinkman.aether",
+    "productName": "Aether Manga",
     "copyright": "Copyright © 2019 ${author}",
     "mac": {
       "category": "public.app-category.utilities"
