--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
   "dependencies": {
     "electron-devtools-installer": "^2.2.4",
     "electron-is-dev": "^1.1.0",
+    "firebase": "^7.1.0",
     "lodash": "^4.17.15",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-firebase-hooks": "^2.1.0",
     "react-scripts": "3.1.2",
     "styled-components": "^4.4.0"
   },
@@ -54,6 +56,7 @@
     "@storybook/react": "^5.2.3",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.141",
     "@types/react": "^16.9.5",
