--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     ]
   },
   "dependencies": {
+    "comicvine-client": "^0.1.2",
     "electron-devtools-installer": "^2.2.4",
     "electron-is-dev": "^1.1.0",
     "firebase": "^7.1.0",
+    "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.15",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
