firebase initialized and starting design

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,8 @@
     }
   },
   "globals": {
+    "navigator": true,
+    "module": true,
     "clearTimeout": true,
     "setTimeout": true,
     "document": true,
