--- a/package.json
+++ b/package.json
@@ -41,15 +41,18 @@
     "firebase": "^7.1.0",
     "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.15",
+    "navi": "^0.13.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-firebase-hooks": "^2.1.0",
-    "react-scripts": "3.1.2",
+    "react-navi": "^0.13.6",
+    "react-scripts": "3.2.0",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "@rescripts/cli": "^0.0.12",
     "@rescripts/rescript-env": "^0.0.10",
+    "@rescripts/utilities": "^0.0.5",
     "@storybook/addon-actions": "^5.2.3",
     "@storybook/addon-links": "^5.2.3",
     "@storybook/addons": "^5.2.3",
@@ -63,28 +66,32 @@
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "@types/styled-components": "^4.1.19",
-    "@typescript-eslint/eslint-plugin": "^2.3.2",
-    "@typescript-eslint/parser": "^2.3.2",
+    "@typescript-eslint/eslint-plugin": "^2.3.3",
+    "@typescript-eslint/parser": "^2.3.3",
     "concurrently": "^5.0.0",
     "cross-env": "^6.0.3",
     "electron": "^6.0.11",
     "electron-builder": "^21.2.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-adapter-react-16": "^1.15.0",
+    "enzyme-to-json": "^3.4.2",
     "eslint-config-prettier": "^6.4.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "husky": "^3.0.8",
+    "jest-enzyme": "^7.1.1",
     "lint-staged": "^9.4.1",
     "prettier": "^1.18.2",
     "spectron": "^8.0.0",
     "typescript": "^3.6.3",
     "wait-on": "^3.3.0"
   },
-  "rescripts": [
-    "env"
-  ],
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  },
   "build": {
     "appId": "com.valpinkman.aether",
     "productName": "Aether Manga",
