--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -47,6 +44,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.0",
+    "styled-icons": "^8.5.1",
     "styled-system": "^5.1.2"
   },
   "devDependencies": {
@@ -58,6 +56,8 @@
     "@storybook/addons": "^5.2.3",
     "@storybook/preset-typescript": "^1.1.0",
     "@storybook/react": "^5.2.3",
+    "@testing-library/jest-dom": "^4.1.2",
+    "@testing-library/react": "^9.3.0",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/firebase": "^3.2.1",
@@ -93,6 +93,11 @@
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ]
+  },
+  "lint-staged": {
+    "*.ts": "eslint --fix",
+    "*.tsx": "eslint --fix",
+    "*.js": "eslint --fix"
   },
   "build": {
     "appId": "com.valpinkman.aether",
